# trlang

./: .gitignore  CMakeLists.txt  LICENSE  libtr_lang-config.cmake
include/: CMakeLists.txt  trlang.hpp
include/trlang/: ChunkGenerator.hpp  Curl.hpp  Enum.hpp  ReversibleRandomGenerator.hpp  VectorBuilders.h  functional.hpp  json.hpp  ranges.h  vector.hpp
include/trlang/concurrent/: sync.h
include/trlang/functional/: helper_functions.h  optional.hpp  ptr_greater.hpp  ptr_less.hpp  type_helper.h  variant_helper.h
include/trlang/hfn/: Applicative_c.hpp  Box.hpp  DoubleBox.hpp  Functor_c.hpp  Monad_c.hpp  Prelude.hpp
include/trlang/timers/: ScopedTimer.hpp
src/trlang/: Curl.cpp  ReversibleRandomGenerator.cpp  json.cpp
tests/: CMakeLists.txt
tests/src/: OptionalTests.cpp  ReversibleRandomGeneratorTests.cpp  ScopedTimerTests.cpp  main.cpp  test_runner.cpp
tests/src/hfn/: ApplicativeTests.cpp  FunctorTests.cpp  MonadTests.cpp  PreludeTests.cpp
